backend/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smarthome-backend-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: smarthome-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
