backend/backend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smarthome-backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/websocket-services: smarthome-backend-service
    nginx.org/websocket-services: smarthome-backend-service
    nginx.ingress.kubernetes.io/server-alias: "smarthome-backend-service"
    ingress.kubernetes.io/rewrite-target: /backend/*
spec:
  rules:
  - host: mychin.ddns.net
    http:
      paths:
      - path: /backend/*
        backend:
          serviceName: smarthome-backend-service
          servicePort: 3000
